Documentation edits made through Mintlify web editor

--- a/Creator-Program.mdx
+++ b/Creator-Program.mdx
@@ -11,8 +11,11 @@ Earn 30% recurring revenue + $1/1000 views running our own pre-built agents to p
 
 This program makes it easy for Open Agent Cloud instances to pay for themselves on top of your other agents.
 
-To jump-start the program, for the next 24 hours only we’re holding a lifetime deal for Open Agent Cloud for a very limited number of lucky customers! 
-
 Open Agent Cloud is a cloud instance that runs your scheduled agents in a pre-built linux container that updates in 20 seconds and spins up pre-installed in 5 minutes. Each schedule is cloned across Open Agent Cloud instances to make it easy to scale to thousands of agents in parallel. 
 
+1) Join our affiliate program: https://affiliates.cheatlayer.com/
+
+2) Use our pre-built, your own, even manually generate agents that iterate good content over time to post to Tiktok, Youtube, and Twitter. You can do this by scraping your profile, competitors, or the trending searches in your market first to decide the content to post. We have a new Creator Program no-code node you can add at the end of an automation to track the URL and views.
+
+3) We’ll track the total views every month and payout to the affiliate account as an added bonus! We’ll also use the global data across thousands of a/b testing marketing agents to feed the same list back and iterate generating better content over time!
 
