Documentation edits made through Mintlify web editor

--- a/Agents-API.mdx
+++ b/Agents-API.mdx
@@ -4,6 +4,12 @@ description: 'Trigger agents from other services using a simple JSON API that re
 ---
 The Agents API now runs on every Open Agent Studio instance. An easy way to test this is to run Ngrok locally, or use Open Agent Studio which publishes a public IP address you can use as your personal Agents API. 
 ![Agents API](https://storage.googleapis.com/cheatlayer/agents_api.png)
+
+The website editor now generates a sample curl request in simple english with the JSON API for you to test. You can install ngrok to run the Agents API locally if you add /agents to the end of the ngrok address like in the above image. 
+
+![Agents API](https://storage.googleapis.com/cheatlayer/agents_api_2.webp)
+
+
 It even returns all the saved agent data during the automation, plus the verification testing loop steps we use to verify each action. 
 
 <h1>Key Concepts</h1>
