Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -5,7 +5,7 @@ description: "Open Agent Studio: No-Code RPA Platform Documentation"
 
 Open Agent Studio is the first cross platform desktop application built to enable Agentic Process Automation as an open-source alternative and replacement for UIpath and all other RPA tools today.
 
-Download for Windows and Mac at [https://openagent.studio.](https://openagent.studio.)
+Download for Windows and Mac at [https://openagent.studio .](https://openagent.studio)
 
 ### Origin
 
