Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -9,6 +9,8 @@ Download for Windows and Mac at [https://openagent.studio .](https://openagent.s
 
 Windows Install instructions:
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8xhFKkD4H-0?si=tlOMc3SsQQrmPlkB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen />
+
 https://www.youtube.com/watch?v=8xhFKkD4H-0
 
 ### Origin
@@ -26,7 +28,6 @@ In a future where the AI in your pocket can generate custom, secure, and free ve
 ## Agentic Process Automation
 
 ![Generalized Agents framework](https://storage.googleapis.com/cheatlayer/agent.png)
-
 
 ![image](https://github.com/user-attachments/assets/ff792176-c3cc-41df-bbaf-8728e7520540)
 
@@ -54,7 +55,7 @@ Open Agent Studio offers a comprehensive suite of features to empower anyone, re
 
 <video controls className="w-full aspect-video" src="https://storage.googleapis.com/cheatlayer/finsta.mp4" />
 
-Installing Open Agent Studio locally, or on-premise, requires an enterprise license. Please contact [support@cheatlayer.com](mailto:support@cheatlayer.com) for details. 
+Installing Open Agent Studio locally, or on-premise, requires an enterprise license. Please contact [support@cheatlayer.com](mailto:support@cheatlayer.com) for details.
 
 ### Windows Install Instructions
 
